Fix text color in textarea for chrome in dark mode

--- a/client/src/CreateItemComponent.css
+++ b/client/src/CreateItemComponent.css
@@ -37,6 +37,7 @@
   font-family: inherit;
   resize: none;
   width: 100%;
+  color: var(--text-color);
 }
 .CreateItemComponent__form__inputWrapper > textarea {
   position: relative;
