--- a/client/src/EditItemComponent.css
+++ b/client/src/EditItemComponent.css
@@ -40,6 +40,7 @@
 }
 .EditItemComponent__name > textarea {
   background: transparent;
+  color: var(--text-color);
 }
 .EditItemComponent__name > textarea:focus {
   box-shadow: none;
